<resources>
    <string name="app_name">FineBye</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="map">地圖</string>
    <string name="warning_setting">警示設定</string>
    <string name="fine_bot">罰金試算</string>
    <string name="search">搜尋</string>
    <string name="theme">主題</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="road">道路</string>
    <string name="freeway">高速公路</string>
    <string name="highway">快速道路</string>
    <string name="normalway">一般道路</string>
    <string name="transportation">交通工具</string>
    <string name="moto">機車</string>
    <string name="car">小型車(重機)</string>
    <string name="over_speed">超速</string>
    <string name="over_speed_0_20">0-20</string>
    <string name="over_speed_20_40">20-40</string>
    <string name="over_speed_40_60">40-60</string>
    <string name="over_speed_60_80">60-80</string>
    <string name="over_speed_80_100">80-100</string>
    <string name="over_speed_100_up">100↑</string>
    <string name="calculate">計算</string>
    <string name="title_activity_maps">Map</string>
    <string name="shock">震動</string>
    <string name="sound">聲音</string>
    <string name="distance">距離</string>
    <string name="keyword">關鍵字</string>
    <string name="warning_setting_showcase_distance_title">距離設定</string>
    <string name="warning_setting_showcase_distance_text">設定要警示的距離100m~1000m</string>
    <string name="warning_setting_showcase_shock_title">震動設定</string>
    <string name="warning_setting_showcase_shock_text">設定當有測速照相進入設定的距離時是否要以震動提醒</string>
    <string name="permission_denied">權限不足</string>
</resources>
